# chenxuejuan_thesis

code/hill/: CMakeLists.txt
code/hill/include/: autogrid.h  autogrid_parameters.h  boundary_condition.h  boundary_layer_mesh.h  boundary_layer_mesh_parameters.h  cartesian_mesh.h  cartesian_mesh_parameters.h  common.h  definitions.h  discrete_geometry_repair.h  discrete_geometry_repair_parameters.h  discrete_geometry_struct.h  discretize_curve.h  discretize_curve_parameters.h  discretize_surface.h  discretize_surface_111.h  discretize_surface_delaunay.h  discretize_surface_delaunay_parameters.h  discretize_surface_parameters.h  discretize_surface_remesh.h  discretize_surface_remesh_parameters.h  distributed_paralle_refine.h  exception.hpp  extrude.h  extrude_parameters.h  geometry_data_struct.h  geometry_interface_occ.h  mesh_data_struct.h  mesh_quality.h  parameters.h  polygonal_mesh.h  sizing_field_interface.h  sizing_field_parameters.h  structure_mesh.h  tetrahedral_mesh.h  tetrahedral_mesh_parameters.h  tiger.h  tiger_parameters.h  vmesh.h
code/hill/src/: test_hillMesh.cpp
code/hill/tools/: cgnsWrite.cpp  cgnsWrite.h  discrete_projection.hpp  geometry_interface_plane.cpp  geometry_interface_plane.h  list_to_matrix.hpp  matrix_to_list.hpp  merge_surface_mesh.hpp  meshIO.cpp  meshIO.h  mesh_repair.cpp  mesh_repair.h  output_info.hpp  test_linemesh.hpp  twoPointsToLineMesh.hpp
code/imprint/: CMakeLists.txt
code/imprint/include/: Imprint.h  Parameterization.h  binary_tree.hpp  interface.h  stl_reader.h
code/imprint/lib/Debug/: glad.lib  glfw3.lib
code/imprint/model/: 449bunny.vtk  bunny_unit1.vtk  unit1.vtk
code/imprint/src/: Imprint.cpp  Parameterization.cpp  interface.cpp
code/imprint/test/: geometry.cpp  geometry.hpp  main.cpp
其他材料/YUNBO/: 0924晚会议材料.docx  1.类TAU网格的技术难点和解决方案.docx  2.自适应技术难点和解决方案.docx  3.类phi网格的技术难点和解决方案.docx  TAU&Phi.docx  TAU.docx  TAU方案技术路线优化.docx  TAU进度0424.pptx  autogrid相交.7z  任务书整理.xlsx  并行四面体网格生成关键技术研究报告.docx  自适应.pptx  自适应伪代码.docx  项目总结.docx
其他材料/YUNBO/0506报告/: 浙大通用网格算法开发报告初版123.docx
其他材料/YUNBO/autogrid相交/: edges.txt  test_sf_stl_dulpicate_point.vtk
其他材料/专业实践/: 专业实践报告.docx  专业实践计划表.docx  专业实践鉴定表.docx  学年小结.doc  校外专业实践导师推荐-杨帆.doc  附件3.浙江大学2024-2025学年优秀团员推荐表_陈雪鹃.doc
其他材料/专利/: pic.pptx  区别说明.docx  符号补充说明.docx
其他材料/专利/电磁自动化/: fig21_intersections.pptx  ~$251117.docx
其他材料/开题/: 开题报告.docx
其他材料/论文/: ~$大纲.docx  毕业论文.docx  毕业论文_大纲.docx  论文中期进展报告.docx
其他材料/读书报告/: 读书报告1.docx  读书报告2.docx  读书报告3.docx  读书报告4.docx
其他材料/预答辩/: 稿子.doc  陈雪鹃_22324069_1774421938604_预答辩审批表.xlsx
其他材料/预答辩/材料/: 预答辩报名表.docx
其他材料/预答辩/材料/读书报告表/: 陈雪鹃_22324069_2025-03-12_1773637271815.xlsx  陈雪鹃_22324069_2025-04-18_1773637271803.xlsx  陈雪鹃_22324069_2025-05-15_1773637271790.xlsx  陈雪鹃_22324069_2025-06-09_1773637271827.xlsx
答辩材料/: 1.学位申请书.xls  204 研究生学位论文（实践成果）评阅、答辩酬金表.doc  4.答辩记录表.xls  5.修改定稿表.doc  7.核查要素清单.doc  8.修改说明表.doc  新建 DOCX 文档.docx  毕业研究生登记表填表说明.docx  稿子.doc  陈雪鹃答辩决议书.docx  需答辩专家签字材料清单.xlsx
答辩材料/3.答辩表决票/: 22324069-陈雪鹃-答辩申请表_1779872821407.xls  浙江大学硕士学位论文（实践成果）评审修改后申请答辩表.doc
